# Heisenberg

./: .gitignore  Cargo.proposed.toml  Cargo.toml  README.md  heisenberg_memory.sql
.github/: FUNDING.yml
scripts/: build.sh  cook.sh  drive.sh  say-my-name.sh
sql/: memory_schema.sql
src/: main.rs
src/blue_sky/: mod.rs  patcher.rs
src/gus/: mod.rs  scheduler.rs  task.rs
src/hank/: mod.rs  vision.rs
src/heisenberg/: agent.rs  mod.rs
src/jesse/: mod.rs  output.rs  runner.rs  sandbox.rs
src/mike/: db.rs  lru.rs  mod.rs  monitor.rs  zones.rs
src/saul/: config.rs  mod.rs  policy.rs
src/the_lab/: engine.rs  gguf.rs  mod.rs  prompt.rs  server.rs  turbo_quant.rs
src/the_rv/: driver.rs  mod.rs
