[package]
name = "heisenberg"
version = "0.1.0"
edition = "2021"
authors = ["Heisenberg <you@know.who>"]
description = "A fully local autonomous AI agent — say my name."
license = "MIT"
readme = "README.md"

[[bin]]
name = "heisenberg"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.27"
ratatui = "0.26"

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
deadpool-postgres = "0.12"
postgres-types = { version = "0.2", features = ["derive"] }

# Misc utilities
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
dirs = "5"
walkdir = "2"
tempfile = "3"
rand = "0.8"
rand_distr = "0.4"
hex = "0.4"
nalgebra = "0.32"
sha2 = "0.10"
base64 = "0.22"

# Memory / system monitoring
sysinfo = "0.30"

# HTTP (for future plugin hooks — local only)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Channels / bounded queues
flume = "0.11"

# Config
config = "0.14"
viuer = { version = "0.11.0", features = ["print-file"] }
image = "0.25.10"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1
